Small changes to index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We're getting married! </h3>
+                <h3>We're getting married!</h3>
                 <p>Saturday, September 21st, 2024</p>
             </div>
         </div>
@@ -127,10 +127,10 @@
             </div>
             <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
-        </div>
+        </div> -->
     </div>
 </section>
 
@@ -144,7 +144,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="wp3">
-                    <h5 class="text-center">Gunbarrel, Colorado  <span class="time">5PM - 10PM</span></h5>
+                    <h5 class="text-center">Gunbarrel, Colorado <span class="time">5PM - 10PM</span></h5>
                     <p>Join us for a wonderful, relaxed evening in lovely Boulder, Colorado.  We will have a food truck catering the event with many fantastic main dishes to choose from.  </p>
                     
                 </div>
