testing code pipeline AWS

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> -->
             <div class="col-md-12">
                 <p>
-                    Elopement info goes here
+                    This is a test of the auto deploy
                 </p>
             </div>
             <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
