Minor index.html updates

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Taylor & Megan are getting married!!">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img-mine/hero-min.jpg">
+    <meta property="og:image" content="http://celebratewiththestocks.com/img-mine/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -81,7 +81,6 @@
                             <li><a href="#intro">The Elopement</a></li>
                             <li><a href="#events">The Reception</a></li>
                             <li><a href="#qa">Q&A</a></li>
-                            <!-- <li><a href="#instagram">Instagram</a></li> -->
                             <li><a href="#eng-pics">Photos</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Boulder</a></li>
                         </ul>
