--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Sindre</title>
+    <title>Taylor & Megan are getting married!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Taylor & Megan are getting married!!">
+    <meta property="og:title" content="Taylor & Megan are getting married!">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="test">
+    <meta property="og:image" content="http://celebratewiththestocks.com/img-mine/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
