Moved images, other changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 
     <script>
         // load css files from CDN if local node_modules fail
@@ -74,7 +73,7 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img-mine/title.png" alt="Logo"></a></div>
+                <div class="logo"><a href="#"><img src="img/title.png" alt="Logo"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
@@ -225,63 +224,63 @@
         <div class="row">
             <div class="col-md-2">
                 <!-- Larger image -->
-                <a class="fancybox" rel="group" href="img-mine/1.jpg">
+                <a class="fancybox" rel="group" href="img/1.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
                         <!-- Smaller image -->
-                        <img src="img-mine/1.jpg" alt=""/>
+                        <img src="img/1.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/2.jpg">
+                <a class="fancybox" rel="group" href="img/2.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/2.jpg" alt=""/>
+                        <img src="img/2.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/3.jpg">
+                <a class="fancybox" rel="group" href="img/3.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/3.jpg" alt=""/>
+                        <img src="img/3.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/4.jpg">
+                <a class="fancybox" rel="group" href="img/4.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/4.jpg" alt=""/>
+                        <img src="img/4.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/5.jpg">
+                <a class="fancybox" rel="group" href="img/5.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/5.jpg" alt=""/>
+                        <img src="img/5.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/6.jpg">
+                <a class="fancybox" rel="group" href="img/6.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/6.jpg" alt=""/>
+                        <img src="img/6.jpg" alt=""/>
                     </div>
                 </a>
             </div>
