--- a/index_template.html
+++ b/index_template.html
@@ -73,7 +73,7 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img-mine/title.png" alt="Logo"></a></div>
+                <div class="logo"><a href="#"><img src="img/title.png" alt="Logo"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
@@ -224,63 +224,63 @@
         <div class="row">
             <div class="col-md-2">
                 <!-- Larger image -->
-                <a class="fancybox" rel="group" href="img-mine/1.jpg">
+                <a class="fancybox" rel="group" href="img/1.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
                         <!-- Smaller image -->
-                        <img src="img-mine/1.jpg" alt=""/>
+                        <img src="img/1.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/2.jpg">
+                <a class="fancybox" rel="group" href="img/2.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/2.jpg" alt=""/>
+                        <img src="img/2.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/3.jpg">
+                <a class="fancybox" rel="group" href="img/3.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/3.jpg" alt=""/>
+                        <img src="img/3.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/4.jpg">
+                <a class="fancybox" rel="group" href="img/4.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/4.jpg" alt=""/>
+                        <img src="img/4.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/5.jpg">
+                <a class="fancybox" rel="group" href="img/5.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/5.jpg" alt=""/>
+                        <img src="img/5.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img-mine/6.jpg">
+                <a class="fancybox" rel="group" href="img/6.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img-mine/6.jpg" alt=""/>
+                        <img src="img/6.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -423,7 +423,6 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <!-- <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p> -->
             </div>
         </div>
     </div>
