--- a/index.html
+++ b/index.html
@@ -423,7 +423,6 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <!-- <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p> -->
             </div>
         </div>
     </div>
@@ -435,7 +434,7 @@
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.min.js"></script>
+<script src="js/scripts.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBh3lH4prJ4imWpsQnmkbK5uVpFrGhiYpE&callback=initMap"></script>
 <!-- Google Analytics -->
