--- a/index_template.html
+++ b/index_template.html
@@ -434,7 +434,7 @@
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.min.js"></script>
+<script src="js/<%= script %>"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBh3lH4prJ4imWpsQnmkbK5uVpFrGhiYpE&callback=initMap"></script>
 <!-- Google Analytics -->
