--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="css/jquery.fancybox.css"> -->
+    <link rel="stylesheet" href="css/fancybox.css" />
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/styles.min.css">
     <link rel="stylesheet" href="css/queries.css">
@@ -223,65 +223,33 @@
         </div>
         <div class="row">
             <div class="col-md-2">
-                <!-- Larger image -->
-                <a class="fancybox" rel="group" href="img/1.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <!-- Smaller image -->
-                        <img src="img/1.jpg" alt=""/>
-                    </div>
+                <a href="img/1.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="img/1.jpg" />
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/2.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <img src="img/2.jpg" alt=""/>
-                    </div>
+                <a href="img/2.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="img/2.jpg" />
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/3.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <img src="img/3.jpg" alt=""/>
-                    </div>
+                <a href="img/3.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="img/3.jpg" />
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/4.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <img src="img/4.jpg" alt=""/>
-                    </div>
+                <a href="img/4.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="img/4.jpg" />
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/5.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <img src="img/5.jpg" alt=""/>
-                    </div>
+                <a href="img/5.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="img/5.jpg" />
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/6.jpg">
-                    <div class="img-wrap">
-                        <div class="overlay">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <img src="img/6.jpg" alt=""/>
-                    </div>
+                <a href="img/6.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                    <img src="img/6.jpg" />
                 </a>
             </div>
         </div>
@@ -429,12 +397,7 @@
 </footer>
 <script src="js/vendor/jquery-1.11.2.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
 <script src="node_modules/waypoints/lib/jquery.waypoints.min.js" onerror="loadJsFromCDN('waypoints.js')"></script>
-<!-- <script src="js/jquery.fancybox.pack.js"></script> -->
-<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
-/>
+<script src="js/fancybox.umd.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
