turn debugging off

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.min.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBh3lH4prJ4imWpsQnmkbK5uVpFrGhiYpE&callback=initMap"></script>
 <!-- Google Analytics -->
