--- a/index_template.html
+++ b/index_template.html
@@ -69,7 +69,7 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-<section class="hero">
+<section id="home" class="hero">
     <section class="navigation">
         <header>
             <div class="header-content">
@@ -77,6 +77,7 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
+                            <li><a href="#home">Home</a></li>
                             <li><a href="#intro">The Elopement</a></li>
                             <li><a href="#events">The Reception</a></li>
                             <li><a href="#qa">Q&A</a></li>
