--- a/index_template.html
+++ b/index_template.html
@@ -326,6 +326,27 @@
     </div>
 </section>
 
+<section class="text-center" id="wishlist">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Gifts</h3>
+            </div>
+        </div>
+        <div class="row">
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> -->
+            <div class="col-md-12">
+                <p><a href="https://www.amazon.com/wedding/share/celebratewiththestocks">Amazon Wishlist</a></p>
+            </div>
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
+        </div>
+        <!-- <div class="row">
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+        </div> -->
+    </div>
+</section>
+
 <section class="rsvp text-center" id="rsvp">
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
