--- a/output/index.html
+++ b/output/index.html
@@ -10,13 +10,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>title goes here</title>
+    <title>Taylor & Megan are getting married!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="title goes here">
+    <meta property="og:title" content="Taylor & Megan are getting married!">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="celebratewiththestocks.com/tobedefined">
+    <meta property="og:image" content="http://celebratewiththestocks.com/img-mine/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -323,6 +323,27 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="text-center" id="wishlist">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Gifts</h3>
+            </div>
+        </div>
+        <div class="row">
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> -->
+            <div class="col-md-12">
+                <p><a href="https://www.amazon.com/wedding/share/celebratewiththestocks">Amazon Wishlist</a></p>
+            </div>
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
+        </div>
+        <!-- <div class="row">
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+        </div> -->
     </div>
 </section>
 
