Change email and name to First and Last name fields

--- a/index_template.html
+++ b/index_template.html
@@ -452,15 +452,15 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Your email"
+                                <i class="fa fa-user"></i><input  name="givenname" class=""
+                                                                     placeholder="First name"
                                                                      required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Your name"
+                                <i class="fa fa-user"></i><input name="surname" class=""
+                                                                 placeholder="Last name"
                                                                  required>
                             </div>
                         </div>
