change numguests var name, change serialize to serializeArray

--- a/index_template.html
+++ b/index_template.html
@@ -468,7 +468,7 @@
                     <div class="row">
                         <div class="col-md-12 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
+                                <i class="fa fa-users"></i><input type="number" name="numguests" class="" min="0"
                                                                   max="4"
                                                                   placeholder="Number of Guests"
                                                                   required>
