--- a/output/index.html
+++ b/output/index.html
@@ -452,14 +452,14 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-user"></i><input  name="givenname" class=""
+                                <i class="fa fa-user"></i><input id="rsvp-givenname"  name="givenname" class=""
                                                                      placeholder="First name"
                                                                      required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="surname" class=""
+                                <i class="fa fa-user"></i><input id="rsvp-surname" name="surname" class=""
                                                                  placeholder="Last name"
                                                                  required>
                             </div>
@@ -496,7 +496,7 @@
         </div>
     </div>
 </footer>
-<script src="js/vendor/jquery-1.11.2.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
+<script src="js/vendor/jquery-3.7.1.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
 <script src="js/jquery.waypoints.min.js" onerror="loadJsFromCDN('waypoints.js')"></script>
 <script src="js/fancybox.umd.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
