--- a/index_template.html
+++ b/index_template.html
@@ -433,7 +433,7 @@
                     </button>
                     <div class="section-padding">
                         <h3>Thank you!</h3>
-                        <p>We are glad to see you join us on our big day.</p>
+                        <p>We can't wait to celebrate with you</p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
