--- a/output/index.html
+++ b/output/index.html
@@ -85,6 +85,7 @@
                             <li><a href="#events">The Reception</a></li>
                             <li><a href="#qa">Q&A</a></li>
                             <li><a href="#eng-pics">Photos</a></li>
+                            <li><a href="#rsvp">RSVP</a></li>
                             <!-- <li class="hidden-sm hidden-xs"><a href="#video-bg">Boulder</a></li> -->
                         </ul>
                         <ul class="member-actions">
