Message on how to RSVP no

--- a/output/index.html
+++ b/output/index.html
@@ -447,6 +447,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <h2>RSVP</h2>
                 <p>We would greatly appreciate if you could RSVP before August 1st, 2024</p>
+                <p>If you cannot attend, please RSVP with a "0" for the "Number of Guests"</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       >
@@ -470,7 +471,7 @@
                         <div class="col-md-12 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input type="number" name="numguests" class="" min="0"
-                                                                  max="4"
+                                                                  max="7"
                                                                   placeholder="Number of Guests"
                                                                   required>
                             </div>
@@ -504,7 +505,7 @@
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.min.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBh3lH4prJ4imWpsQnmkbK5uVpFrGhiYpE&callback=initMap"></script>
 <!-- Google Analytics -->
