--- a/index_template.html
+++ b/index_template.html
@@ -447,7 +447,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <h2>RSVP</h2>
                 <p>Our RSVP date has already passed</p>
-                <p>Please reach out to either the bride or the groom to see if we can accomdate your party</p>
+                <p>Please reach out to either the bride or the groom to see if we can accommodate your party</p>
                 </form>
             </div>
         </div>
